add get all issues and get an issue
